first steps with yfinance

--- a/yfinance.ipynb
+++ b/yfinance.ipynb
@@ -13,12 +13,284 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import yfinance as yf\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "vscode": {
+     "languageId": "powershell"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
+      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
+      "\n",
+      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\n",
+      "100  5699  100  5699    0     0   6536      0 --:--:-- --:--:-- --:--:--  6543\n",
+      "100  5699  100  5699    0     0   6533      0 --:--:-- --:--:-- --:--:--  6543\n"
+     ]
+    }
+   ],
+   "source": [
+    "!curl -o apple.json https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-PY0220EN-SkillsNetwork/data/apple.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "yfinance.Ticker object <AAPL>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "$AAPL: possibly delisted; no price data found  (1d 1926-02-26 -> 2025-02-01)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Dividends</th>\n",
+       "      <th>Stock Splits</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1980-12-12 00:00:00-05:00</th>\n",
+       "      <td>0.098834</td>\n",
+       "      <td>0.099264</td>\n",
+       "      <td>0.098834</td>\n",
+       "      <td>0.098834</td>\n",
+       "      <td>469033600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-15 00:00:00-05:00</th>\n",
+       "      <td>0.094108</td>\n",
+       "      <td>0.094108</td>\n",
+       "      <td>0.093678</td>\n",
+       "      <td>0.093678</td>\n",
+       "      <td>175884800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-16 00:00:00-05:00</th>\n",
+       "      <td>0.087232</td>\n",
+       "      <td>0.087232</td>\n",
+       "      <td>0.086802</td>\n",
+       "      <td>0.086802</td>\n",
+       "      <td>105728000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-17 00:00:00-05:00</th>\n",
+       "      <td>0.088951</td>\n",
+       "      <td>0.089381</td>\n",
+       "      <td>0.088951</td>\n",
+       "      <td>0.088951</td>\n",
+       "      <td>86441600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1980-12-18 00:00:00-05:00</th>\n",
+       "      <td>0.091530</td>\n",
+       "      <td>0.091959</td>\n",
+       "      <td>0.091530</td>\n",
+       "      <td>0.091530</td>\n",
+       "      <td>73449600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-27 00:00:00-05:00</th>\n",
+       "      <td>224.020004</td>\n",
+       "      <td>232.149994</td>\n",
+       "      <td>223.979996</td>\n",
+       "      <td>229.860001</td>\n",
+       "      <td>94863400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-28 00:00:00-05:00</th>\n",
+       "      <td>230.850006</td>\n",
+       "      <td>240.190002</td>\n",
+       "      <td>230.809998</td>\n",
+       "      <td>238.259995</td>\n",
+       "      <td>75707600</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-29 00:00:00-05:00</th>\n",
+       "      <td>234.119995</td>\n",
+       "      <td>239.860001</td>\n",
+       "      <td>234.009995</td>\n",
+       "      <td>239.360001</td>\n",
+       "      <td>45486100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-30 00:00:00-05:00</th>\n",
+       "      <td>238.669998</td>\n",
+       "      <td>240.789993</td>\n",
+       "      <td>237.210007</td>\n",
+       "      <td>237.589996</td>\n",
+       "      <td>55658300</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-31 00:00:00-05:00</th>\n",
+       "      <td>247.190002</td>\n",
+       "      <td>247.190002</td>\n",
+       "      <td>233.440002</td>\n",
+       "      <td>236.000000</td>\n",
+       "      <td>100959800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>11125 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                 Open        High         Low       Close  \\\n",
+       "Date                                                                        \n",
+       "1980-12-12 00:00:00-05:00    0.098834    0.099264    0.098834    0.098834   \n",
+       "1980-12-15 00:00:00-05:00    0.094108    0.094108    0.093678    0.093678   \n",
+       "1980-12-16 00:00:00-05:00    0.087232    0.087232    0.086802    0.086802   \n",
+       "1980-12-17 00:00:00-05:00    0.088951    0.089381    0.088951    0.088951   \n",
+       "1980-12-18 00:00:00-05:00    0.091530    0.091959    0.091530    0.091530   \n",
+       "...                               ...         ...         ...         ...   \n",
+       "2025-01-27 00:00:00-05:00  224.020004  232.149994  223.979996  229.860001   \n",
+       "2025-01-28 00:00:00-05:00  230.850006  240.190002  230.809998  238.259995   \n",
+       "2025-01-29 00:00:00-05:00  234.119995  239.860001  234.009995  239.360001   \n",
+       "2025-01-30 00:00:00-05:00  238.669998  240.789993  237.210007  237.589996   \n",
+       "2025-01-31 00:00:00-05:00  247.190002  247.190002  233.440002  236.000000   \n",
+       "\n",
+       "                              Volume  Dividends  Stock Splits  \n",
+       "Date                                                           \n",
+       "1980-12-12 00:00:00-05:00  469033600        0.0           0.0  \n",
+       "1980-12-15 00:00:00-05:00  175884800        0.0           0.0  \n",
+       "1980-12-16 00:00:00-05:00  105728000        0.0           0.0  \n",
+       "1980-12-17 00:00:00-05:00   86441600        0.0           0.0  \n",
+       "1980-12-18 00:00:00-05:00   73449600        0.0           0.0  \n",
+       "...                              ...        ...           ...  \n",
+       "2025-01-27 00:00:00-05:00   94863400        0.0           0.0  \n",
+       "2025-01-28 00:00:00-05:00   75707600        0.0           0.0  \n",
+       "2025-01-29 00:00:00-05:00   45486100        0.0           0.0  \n",
+       "2025-01-30 00:00:00-05:00   55658300        0.0           0.0  \n",
+       "2025-01-31 00:00:00-05:00  100959800        0.0           0.0  \n",
+       "\n",
+       "[11125 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apple = yf.Ticker(\"AAPL\")\n",
+    "print(apple)\n",
+    "apple.info\n",
+    "apple.actions\n",
+    "apple.history(period=\"max\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'apple.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mapple.json\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[0;32m      3\u001b[0m     apple_info \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mload(json_file)\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mType: \u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28mtype\u001b[39m(apple_info))\n",
+      "File \u001b[1;32mc:\\Users\\anton\\Documents\\Meus Projetos\\Web Scraping\\dashboard-analytics\\dashboard-analytics\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[1;34m(file, *args, **kwargs)\u001b[0m\n\u001b[0;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[0;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    322\u001b[0m     )\n\u001b[1;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'apple.json'"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open('apple.json') as json_file:\n",
+    "    apple_info = json.load(json_file)\n",
+    "    print(\"Type: \", type(apple_info))\n",
+    "apple_info"
    ]
   }
  ],
