beautiful soup workflow

--- a/yfinance.ipynb
+++ b/yfinance.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -94,64 +94,154 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1980-12-12 00:00:00-05:00</th>\n",
-       "      <td>0.098834</td>\n",
-       "      <td>0.099264</td>\n",
-       "      <td>0.098834</td>\n",
-       "      <td>0.098834</td>\n",
-       "      <td>469033600</td>\n",
+       "      <th>2025-01-02 00:00:00-05:00</th>\n",
+       "      <td>248.929993</td>\n",
+       "      <td>249.100006</td>\n",
+       "      <td>241.820007</td>\n",
+       "      <td>243.850006</td>\n",
+       "      <td>55740700</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1980-12-15 00:00:00-05:00</th>\n",
-       "      <td>0.094108</td>\n",
-       "      <td>0.094108</td>\n",
-       "      <td>0.093678</td>\n",
-       "      <td>0.093678</td>\n",
-       "      <td>175884800</td>\n",
+       "      <th>2025-01-03 00:00:00-05:00</th>\n",
+       "      <td>243.360001</td>\n",
+       "      <td>244.179993</td>\n",
+       "      <td>241.889999</td>\n",
+       "      <td>243.360001</td>\n",
+       "      <td>40244100</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1980-12-16 00:00:00-05:00</th>\n",
-       "      <td>0.087232</td>\n",
-       "      <td>0.087232</td>\n",
-       "      <td>0.086802</td>\n",
-       "      <td>0.086802</td>\n",
-       "      <td>105728000</td>\n",
+       "      <th>2025-01-06 00:00:00-05:00</th>\n",
+       "      <td>244.309998</td>\n",
+       "      <td>247.330002</td>\n",
+       "      <td>243.199997</td>\n",
+       "      <td>245.000000</td>\n",
+       "      <td>45045600</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1980-12-17 00:00:00-05:00</th>\n",
-       "      <td>0.088951</td>\n",
-       "      <td>0.089381</td>\n",
-       "      <td>0.088951</td>\n",
-       "      <td>0.088951</td>\n",
-       "      <td>86441600</td>\n",
+       "      <th>2025-01-07 00:00:00-05:00</th>\n",
+       "      <td>242.979996</td>\n",
+       "      <td>245.550003</td>\n",
+       "      <td>241.350006</td>\n",
+       "      <td>242.210007</td>\n",
+       "      <td>40856000</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1980-12-18 00:00:00-05:00</th>\n",
-       "      <td>0.091530</td>\n",
-       "      <td>0.091959</td>\n",
-       "      <td>0.091530</td>\n",
-       "      <td>0.091530</td>\n",
-       "      <td>73449600</td>\n",
+       "      <th>2025-01-08 00:00:00-05:00</th>\n",
+       "      <td>241.919998</td>\n",
+       "      <td>243.710007</td>\n",
+       "      <td>240.050003</td>\n",
+       "      <td>242.699997</td>\n",
+       "      <td>37628900</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>2025-01-10 00:00:00-05:00</th>\n",
+       "      <td>240.009995</td>\n",
+       "      <td>240.160004</td>\n",
+       "      <td>233.000000</td>\n",
+       "      <td>236.850006</td>\n",
+       "      <td>61710900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-13 00:00:00-05:00</th>\n",
+       "      <td>233.529999</td>\n",
+       "      <td>234.669998</td>\n",
+       "      <td>229.720001</td>\n",
+       "      <td>234.399994</td>\n",
+       "      <td>49630700</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-14 00:00:00-05:00</th>\n",
+       "      <td>234.750000</td>\n",
+       "      <td>236.119995</td>\n",
+       "      <td>232.470001</td>\n",
+       "      <td>233.279999</td>\n",
+       "      <td>39435300</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-15 00:00:00-05:00</th>\n",
+       "      <td>234.639999</td>\n",
+       "      <td>238.960007</td>\n",
+       "      <td>234.429993</td>\n",
+       "      <td>237.869995</td>\n",
+       "      <td>39832000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-16 00:00:00-05:00</th>\n",
+       "      <td>237.350006</td>\n",
+       "      <td>238.009995</td>\n",
+       "      <td>228.029999</td>\n",
+       "      <td>228.259995</td>\n",
+       "      <td>71759100</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-17 00:00:00-05:00</th>\n",
+       "      <td>232.119995</td>\n",
+       "      <td>232.289993</td>\n",
+       "      <td>228.479996</td>\n",
+       "      <td>229.979996</td>\n",
+       "      <td>68488300</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-21 00:00:00-05:00</th>\n",
+       "      <td>224.000000</td>\n",
+       "      <td>224.419998</td>\n",
+       "      <td>219.380005</td>\n",
+       "      <td>222.639999</td>\n",
+       "      <td>98070400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-22 00:00:00-05:00</th>\n",
+       "      <td>219.789993</td>\n",
+       "      <td>224.119995</td>\n",
+       "      <td>219.789993</td>\n",
+       "      <td>223.830002</td>\n",
+       "      <td>64126500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-23 00:00:00-05:00</th>\n",
+       "      <td>224.740005</td>\n",
+       "      <td>227.029999</td>\n",
+       "      <td>222.300003</td>\n",
+       "      <td>223.660004</td>\n",
+       "      <td>60234800</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-01-24 00:00:00-05:00</th>\n",
+       "      <td>224.779999</td>\n",
+       "      <td>225.630005</td>\n",
+       "      <td>221.410004</td>\n",
+       "      <td>222.779999</td>\n",
+       "      <td>54697900</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2025-01-27 00:00:00-05:00</th>\n",
@@ -205,18 +295,26 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>11125 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "                                 Open        High         Low       Close  \\\n",
        "Date                                                                        \n",
-       "1980-12-12 00:00:00-05:00    0.098834    0.099264    0.098834    0.098834   \n",
-       "1980-12-15 00:00:00-05:00    0.094108    0.094108    0.093678    0.093678   \n",
-       "1980-12-16 00:00:00-05:00    0.087232    0.087232    0.086802    0.086802   \n",
-       "1980-12-17 00:00:00-05:00    0.088951    0.089381    0.088951    0.088951   \n",
-       "1980-12-18 00:00:00-05:00    0.091530    0.091959    0.091530    0.091530   \n",
-       "...                               ...         ...         ...         ...   \n",
+       "2025-01-02 00:00:00-05:00  248.929993  249.100006  241.820007  243.850006   \n",
+       "2025-01-03 00:00:00-05:00  243.360001  244.179993  241.889999  243.360001   \n",
+       "2025-01-06 00:00:00-05:00  244.309998  247.330002  243.199997  245.000000   \n",
+       "2025-01-07 00:00:00-05:00  242.979996  245.550003  241.350006  242.210007   \n",
+       "2025-01-08 00:00:00-05:00  241.919998  243.710007  240.050003  242.699997   \n",
+       "2025-01-10 00:00:00-05:00  240.009995  240.160004  233.000000  236.850006   \n",
+       "2025-01-13 00:00:00-05:00  233.529999  234.669998  229.720001  234.399994   \n",
+       "2025-01-14 00:00:00-05:00  234.750000  236.119995  232.470001  233.279999   \n",
+       "2025-01-15 00:00:00-05:00  234.639999  238.960007  234.429993  237.869995   \n",
+       "2025-01-16 00:00:00-05:00  237.350006  238.009995  228.029999  228.259995   \n",
+       "2025-01-17 00:00:00-05:00  232.119995  232.289993  228.479996  229.979996   \n",
+       "2025-01-21 00:00:00-05:00  224.000000  224.419998  219.380005  222.639999   \n",
+       "2025-01-22 00:00:00-05:00  219.789993  224.119995  219.789993  223.830002   \n",
+       "2025-01-23 00:00:00-05:00  224.740005  227.029999  222.300003  223.660004   \n",
+       "2025-01-24 00:00:00-05:00  224.779999  225.630005  221.410004  222.779999   \n",
        "2025-01-27 00:00:00-05:00  224.020004  232.149994  223.979996  229.860001   \n",
        "2025-01-28 00:00:00-05:00  230.850006  240.190002  230.809998  238.259995   \n",
        "2025-01-29 00:00:00-05:00  234.119995  239.860001  234.009995  239.360001   \n",
@@ -225,22 +323,29 @@
        "\n",
        "                              Volume  Dividends  Stock Splits  \n",
        "Date                                                           \n",
-       "1980-12-12 00:00:00-05:00  469033600        0.0           0.0  \n",
-       "1980-12-15 00:00:00-05:00  175884800        0.0           0.0  \n",
-       "1980-12-16 00:00:00-05:00  105728000        0.0           0.0  \n",
-       "1980-12-17 00:00:00-05:00   86441600        0.0           0.0  \n",
-       "1980-12-18 00:00:00-05:00   73449600        0.0           0.0  \n",
-       "...                              ...        ...           ...  \n",
+       "2025-01-02 00:00:00-05:00   55740700        0.0           0.0  \n",
+       "2025-01-03 00:00:00-05:00   40244100        0.0           0.0  \n",
+       "2025-01-06 00:00:00-05:00   45045600        0.0           0.0  \n",
+       "2025-01-07 00:00:00-05:00   40856000        0.0           0.0  \n",
+       "2025-01-08 00:00:00-05:00   37628900        0.0           0.0  \n",
+       "2025-01-10 00:00:00-05:00   61710900        0.0           0.0  \n",
+       "2025-01-13 00:00:00-05:00   49630700        0.0           0.0  \n",
+       "2025-01-14 00:00:00-05:00   39435300        0.0           0.0  \n",
+       "2025-01-15 00:00:00-05:00   39832000        0.0           0.0  \n",
+       "2025-01-16 00:00:00-05:00   71759100        0.0           0.0  \n",
+       "2025-01-17 00:00:00-05:00   68488300        0.0           0.0  \n",
+       "2025-01-21 00:00:00-05:00   98070400        0.0           0.0  \n",
+       "2025-01-22 00:00:00-05:00   64126500        0.0           0.0  \n",
+       "2025-01-23 00:00:00-05:00   60234800        0.0           0.0  \n",
+       "2025-01-24 00:00:00-05:00   54697900        0.0           0.0  \n",
        "2025-01-27 00:00:00-05:00   94863400        0.0           0.0  \n",
        "2025-01-28 00:00:00-05:00   75707600        0.0           0.0  \n",
        "2025-01-29 00:00:00-05:00   45486100        0.0           0.0  \n",
        "2025-01-30 00:00:00-05:00   55658300        0.0           0.0  \n",
-       "2025-01-31 00:00:00-05:00  100959800        0.0           0.0  \n",
-       "\n",
-       "[11125 rows x 7 columns]"
+       "2025-01-31 00:00:00-05:00  100959800        0.0           0.0  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +355,9 @@
     "# print(apple)\n",
     "# apple.info\n",
     "# apple.actions\n",
-    "# apple.history(period=\"max\")"
+    "# apple.history(period=\"max\")\n",
+    "apple.history(period='1mo')\n",
+    "# apple.quarterly_income_stmt"
    ]
   },
   {
