--- a/beautiful_soup.ipynb
+++ b/beautiful_soup.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,16 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(io)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28290,6 +28281,29 @@
     "soup = BeautifulSoup(html, \"html.parser\")\n",
     "\n",
     "print(soup.prettify())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'list_iterator' object has no attribute 'parent'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m tag_object \u001b[38;5;241m=\u001b[39m soup\u001b[38;5;241m.\u001b[39mbody\n\u001b[0;32m      2\u001b[0m tag_child \u001b[38;5;241m=\u001b[39m tag_object\u001b[38;5;241m.\u001b[39mchildren\n\u001b[1;32m----> 3\u001b[0m tag_parent \u001b[38;5;241m=\u001b[39m \u001b[43mtag_child\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mparent\u001b[49m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'list_iterator' object has no attribute 'parent'"
+     ]
+    }
+   ],
+   "source": [
+    "tag_object = soup.body\n",
+    "tag_child = tag_object.children\n",
+    "tag_parent = tag_child.parent"
    ]
   }
  ],
