--- a/cheat_sheet.ipynb
+++ b/cheat_sheet.ipynb
@@ -66,6 +66,33 @@
    },
    "outputs": [],
    "source": [
+    "# Atualizar pip dentro do venv\n",
+    "python -m pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Criar kernel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "shellscript"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# Listar kernels disponíveis\n",
     "jupyter kernelspec list"
    ]
