--- a/Tesla_vsGameStop.ipynb
+++ b/Tesla_vsGameStop.ipynb
@@ -18369,9 +18369,9 @@
    "id": "819c5ecc-95c5-4d0c-8acb-1b909379913d",
    "metadata": {},
    "source": [
-    "<h2>About the Author:</h2> \n",
+    "<h3>About the Author:</h3> \n",
     "\n",
-    "<a href=\"https://www.linkedin.com/in/antonio-biasotti/\">Antônio Biasotti</a> has a PhD in Electrical Engineering, his research focused on using machine learning, signal processing, and computer vision to determine how videos impact human cognition. Joseph has been working for IBM since he completed his PhD.\n",
+    "<a href=\"https://www.linkedin.com/in/antonio-biasotti/\">Antônio Biasotti</a> is a undergraduate in Information Systems at Mackenzie University, his final paper research focused on Data Governance and the impacts of Artificial Intelligence regulation in Brazil.\n",
     "\n"
    ]
   }
