updating cheat_sheet

--- a/cheat_sheet.ipynb
+++ b/cheat_sheet.ipynb
@@ -80,7 +80,10 @@
    },
    "outputs": [],
    "source": [
-    "# Criar kernel"
+    "# Criar kernel\n",
+    "pip install jupyter\n",
+    "pip install ipykernel\n",
+    "python -m ipykernel install --user --name=meu_venv --display-name \"Python (meu_venv)\"\n"
    ]
   },
   {
