updating cheat_sheet

--- a/cheat_sheet.ipynb
+++ b/cheat_sheet.ipynb
@@ -83,7 +83,8 @@
     "# Criar kernel\n",
     "pip install jupyter\n",
     "pip install ipykernel\n",
-    "python -m ipykernel install --user --name=meu_venv --display-name \"Python (meu_venv)\"\n"
+    "python -m ipykernel install --user --name=meu_venv --display-name \"Python (meu_venv)\"\n",
+    "jupyter kernelspec uninstall meu_kernel\n"
    ]
   },
   {
